refactor: resolved code comments

--- a/EmployeeManagementSystem/Views/Employee/Create.cshtml
+++ b/EmployeeManagementSystem/Views/Employee/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmployeeManagementSystem.Models.Employee
+﻿@model EmployeeManagementSystem.ViewModels.CreateEmployeeViewModel
 
 @{
     ViewData["Title"] = "Create";
